Add event approval workflow and input sanitization
Introduces event approval requests, including backend logic, API endpoints, and UI components for managing approval requests and statuses. Adds edit event functionality with a new form and page. Implements comprehensive input sanitization utilities and applies them to event and calendar creation and editing to prevent XSS and unsafe input. Updates calendar view logic for safer ID handling. Updates dependencies to include isomorphic-dompurify.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "better-auth": "1.2.12",
     "convex": "^1.25.4",
     "convex-helpers": "^0.1.100",
+    "isomorphic-dompurify": "^2.26.0",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.13.0",
     "next": "^15.2.3",
